# zellij-tab-rename

./: Cargo.toml  LICENSE  README.md  zellij.kdl
.github/workflows/: ci.yml  release.yml
docs/: cwd-resolution.md
src/: config.rs  decorations.rs  format.rs  lib.rs  main.rs  rename.rs
