[package]
name = "zellij-cwd-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zellij_cwd_plugin"
path = "src/main.rs"

[dependencies]
zellij-tile = { git = "https://github.com/zellij-org/zellij", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = "s"
