[package]
name = "zellij-tab-rename"
version = "0.1.0"
edition = "2021"
description = "Zellij plugin that automatically renames tabs based on CWD, process name, or git root"
license = "MIT"
repository = "https://github.com/vmaerten/zellij-tab-rename"
keywords = ["zellij", "plugin", "terminal", "tab"]

[[bin]]
name = "zellij-tab-rename"
path = "src/main.rs"

[dependencies]
zellij-tile = { git = "https://github.com/zellij-org/zellij", branch = "main" }

[profile.release]
lto = true
opt-level = "s"
